discussion/kv_engine/141973/141973_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41742: Test C++17 operator new/delete overloads

Expand memory_tracking_test to cover new C++17 aligned operator new
and delete overloads, to verify platform's global_new_replacement.cc
handles them correctly (see linked patch).

Note that now aligned new/delete are overridden and redirected to
cb_malloc(), additoonal memory allocations part of
ActiveDurabilityMonitor (approx 5KB) are now correctly accounted to
the bucket and hence memory usage has increased; requiring
STBucketQuotaTest to have its quota slightly increased.

Change-Id: I2670f82a26ae819091aed1fb47cdb007423f9b1a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-12-17 21:54:01.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-17 23:25:22.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32638/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32638/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6334/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/memory_tracking_test/memory_tracking_test.cc:108:5: error: no matching function for call to "operator delete" [clang-diagnostic-error]
    operator delete(p, 1);
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:138:6: note: candidate function not viable: no known conversion from "int" to "const std::nothrow_t" for 2nd argument
void operator delete(void*, const std::nothrow_t&) _GLIBCXX_USE_NOEXCEPT
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:147:6: note: candidate function not viable: no known conversion from "int" to "std::align_val_t" for 2nd argument
void operator delete(void*, std::align_val_t)
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:174:13: note: candidate function not viable: no known conversion from "int" to "void *" for 2nd argument
inline void operator delete  (void*, void*) _GLIBCXX_USE_NOEXCEPT { }
            ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:124:6: note: candidate function not viable: requires 1 argument, but 2 were provided
void operator delete(void*) _GLIBCXX_USE_NOEXCEPT
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:149:6: note: candidate function not viable: requires 3 arguments, but 2 were provided
void operator delete(void*, std::align_val_t, const std::nothrow_t&)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/memory_tracking_test/memory_tracking_test.cc:114:5: error: no matching function for call to "operator delete[]" [clang-diagnostic-error]
    operator delete[](p, 1);
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:140:6: note: candidate function not viable: no known conversion from "int" to "const std::nothrow_t" for 2nd argument
void operator delete[](void*, const std::nothrow_t&) _GLIBCXX_USE_NOEXCEPT
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:155:6: note: candidate function not viable: no known conversion from "int" to "std::align_val_t" for 2nd argument
void operator delete[](void*, std::align_val_t)
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:175:13: note: candidate function not viable: no known conversion from "int" to "void *" for 2nd argument
inline void operator delete[](void*, void*) _GLIBCXX_USE_NOEXCEPT { }
            ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:126:6: note: candidate function not viable: requires 1 argument, but 2 were provided
void operator delete[](void*) _GLIBCXX_USE_NOEXCEPT
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:157:6: note: candidate function not viable: requires 3 arguments, but 2 were provided
void operator delete[](void*, std::align_val_t, const std::nothrow_t&)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/memory_tracking_test/memory_tracking_test.cc:121:5: error: no matching function for call to "operator delete" [clang-diagnostic-error]
    operator delete(p, 1, Alignment);
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:149:6: note: candidate function not viable: no known conversion from "int" to "std::align_val_t" for 2nd argument
void operator delete(void*, std::align_val_t, const std::nothrow_t&)
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:174:13: note: candidate function not viable: requires 2 arguments, but 3 were provided
inline void operator delete  (void*, void*) _GLIBCXX_USE_NOEXCEPT { }
            ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:147:6: note: candidate function not viable: requires 2 arguments, but 3 were provided
void operator delete(void*, std::align_val_t)
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:138:6: note: candidate function not viable: requires 2 arguments, but 3 were provided
void operator delete(void*, const std::nothrow_t&) _GLIBCXX_USE_NOEXCEPT
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:124:6: note: candidate function not viable: requires 1 argument, but 3 were provided
void operator delete(void*) _GLIBCXX_USE_NOEXCEPT
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/memory_tracking_test/memory_tracking_test.cc:128:5: error: no matching function for call to "operator delete[]" [clang-diagnostic-error]
    operator delete[](p, 1, Alignment);
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:157:6: note: candidate function not viable: no known conversion from "int" to "std::align_val_t" for 2nd argument
void operator delete[](void*, std::align_val_t, const std::nothrow_t&)
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:175:13: note: candidate function not viable: requires 2 arguments, but 3 were provided
inline void operator delete[](void*, void*) _GLIBCXX_USE_NOEXCEPT { }
            ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:155:6: note: candidate function not viable: requires 2 arguments, but 3 were provided
void operator delete[](void*, std::align_val_t)
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:140:6: note: candidate function not viable: requires 2 arguments, but 3 were provided
void operator delete[](void*, const std::nothrow_t&) _GLIBCXX_USE_NOEXCEPT
     ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/new:126:6: note: candidate function not viable: requires 1 argument, but 3 were provided
void operator delete[](void*) _GLIBCXX_USE_NOEXCEPT
     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6334/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/memory_tracking_test/memory_tracking_test.cc:108:5:
error: no matching function for call to "operator delete" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6334/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4869/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28131/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8209/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7932/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7814/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15752/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6888/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
